# McUpdaterServer

./: CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md
.github/workflows/: c-cpp.yml
Source/include/: Config.h  ConfigManager.h  DiffEngine.h  FileHasher.h  FileScanner.h  Language.h  Logger.h  PackageBuilder.h  UpdateApiGenerator.h  UpdateGenerator.h  VersionManager.h  WebServer.h  ZipManager.h  crow.h  logger.h
Source/src/: Config.cpp  ConfigManager.cpp  DiffEngine.cpp  FileHasher.cpp  FileScanner.cpp  Language.cpp  Logger.cpp  PackageBuilder.cpp  UpdateApiGenerator.cpp  UpdateGenerator.cpp  VersionManager.cpp  WebServer.cpp  ZipManager.cpp  logger.cpp  main.cpp
